# SciProcessScripts

./: .gitignore  README.md
FET-Analyzer/FET-GEN/: .gitignore  README.md  pyproject.toml  run-fet-gen.bat  setup-local-env.bat
FET-Analyzer/FET-GEN/devicecurvegen/: __init__.py  analysis_service.py  api.py  b1500_dataset.py  cli.py  database.py  features.py  harmonize.py  neural.py  physics.py  residual.py  schemas.py  training.py  training_service.py
FET-Analyzer/FET-GEN/docs/: DESIGN.md  STATUS.md
FET-Analyzer/FET-GEN/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
FET-Analyzer/FET-GEN/tests/: test_api.py  test_b1500_dataset.py  test_cli.py  test_database.py  test_features.py  test_harmonize.py  test_neural.py  test_training.py
FET-Analyzer/FET-GEN/tools/: build_export_subset.py  build_hybrid_checkpoint.py  derive_local_delta_dataset.py  evaluate_local_delta_best.py  evaluate_postprocess_rechecks.py  export_database_neural_dataset.py  render_postfix_model_comparison.py  run_aligned_local_affine_delta_fine_sweep.py  run_aligned_local_affine_delta_postmix_sweep.py  run_aligned_local_affine_delta_retune.py  run_aligned_local_affine_delta_training_sweep.py  run_aligned_local_delta_cvae_sweep.py  run_aligned_local_delta_training_sweep.py  run_direction_split_hybrid_experiments.py  run_launcher.py  run_local_delta_affine_sweep.py  run_local_delta_aligned_guide_experiments.py  run_local_delta_aligned_training_sweep.py  run_local_delta_anchor_sweep.py  run_local_delta_base_scale_sweep.py  run_local_delta_refine_sweep.py  run_local_delta_target_experiments.py  run_local_delta_vth_align_local_reverse_sweep.py  run_local_delta_vth_align_reverse_sweep.py  run_local_delta_vth_align_sweep.py  run_local_threshold_delta_hybrid_sweep.py  run_local_threshold_window_experiments.py  run_model_experiments.py  sweep_direction_split_hybrid_focus.py  sweep_directional_hybrid.py  sweep_onstate_postprocessor.py
FET-Analyzer/MOSFET_analyze/python/: README.md  analysis.py  b1500_io.py  b1500_plotter.py  fet_analysis.py  nature_style.py  preprocess.py  pyproject.toml  requirements.txt  run.bat
PL-Analyzer/PL_database/: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  start_pl_database.bat
PL-Analyzer/PL_database/backend/: app.py  config.py  main.py
(+165 files in other folders)
