[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pl-database"
version = "0.1.0"
description = "Local WITec PL spectra database with MATLAB import bridge and web UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "h5py>=3.11",
  "numpy>=1.26",
  "pandas>=2.2",
  "Pillow>=10.4",
  "pydantic>=2.9",
  "python-multipart>=0.0.12",
  "PyYAML>=6.0.2",
  "scipy>=1.13",
  "uvicorn[standard]>=0.30",
  "witio>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["backend*"]
