[project]
name = "mosfet-data-plotter"
version = "1.0.0"
description = "Nature-style plotting and analysis for Keysight B1500A FET curves"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.8",          # Savitzky-Golay / median / Gaussian smoothing
    "matplotlib>=3.8",     # >=3.8 needed so mathtext renders in a custom TTF (Graphik)
    "PySide6>=6.5",        # Qt GUI
]

[tool.uv]
# Script-based app, not an installable package — uv only manages the env.
package = false
